style: Fix scrollbar and add color-schema

--- a/src/globals.css
+++ b/src/globals.css
@@ -33,6 +33,8 @@
     --ring: 240 10% 3.9%;
  
     --radius: 0.5rem;
+
+    color-scheme: light;
   }
  
   .dark {
@@ -63,7 +65,34 @@
     --border: 240 3.7% 15.9%;
     --input: 240 3.7% 15.9%;
     --ring: 240 4.9% 83.9%;
+
+    color-scheme: dark;
   }
+}
+
+
+/* Firefox */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: var(--background) var(--foreground);
+}
+
+
+
+/* Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+  width: 15px;
+}
+
+*::-webkit-scrollbar-track {
+  background: var(--background);
+  border-radius: 5px;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: var(--background);
+  border-radius: 14px;
+  border: 3px solid var(--background);
 }
 
  
@@ -74,4 +103,5 @@
   body {
     @apply bg-background text-foreground;
   }
+
 }
